[tool.poetry]
name = "kotd_analytics"
version = "0.1.0"
description = "Statistical Machine Learning and Empirical Data Modeling analysis of Kick Open The Door (KOTD) data."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pandas = "^1.4.4"
pyEDM = "^1.13.1"
scipy = "^1.9.1"
SQLAlchemy = "^1.4.41"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
PyJWT = "^2.4.0"
psycopg2-binary = "^2.9.3"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
requests = "^2.28.1"
dash = "^2.6.1"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
pytest = "^7.1.3"
Sphinx = "^5.1.1"
pre-commit = "^2.20.0"
interrogate = "^1.5.0"
pre-commit-hooks = "^4.3.0"
mypy = "^0.971"
coverage = "^6.4.4"
pytest-cov = "^3.0.0"
pytest-dotenv = "^0.5.2"
sqlalchemy-stubs = "^0.4"
pandas-stubs = "^1.4.4"
sphinx-autodoc-typehints = "^1.19.2"
reorder-python-imports = "^3.8.2"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
